@@ -257,8 +257,6 @@ public class SolrCore implements SolrInfoBean, Closeable {
   private final String metricTag = SolrMetricProducer.getUniqueMetricTag(this, null);
   private final SolrMetricsContext solrMetricsContext;
 
-  public volatile boolean searchEnabled = true;
-  public volatile boolean indexEnabled = true;
   public volatile boolean readOnly = false;
 
   private PackageListeners packageListeners = new PackageListeners(this);
@@ -1323,26 +1321,26 @@ public class SolrCore implements SolrInfoBean, Closeable {
     newSearcherCounter =
         new AttributedLongCounter(
             parentContext.longCounter(
-                "solr_core_searcher_new", "Total number of new searchers opened"),
+                "solr.core.searcher.new", "Total number of new searchers opened"),
             baseSearcherAttributes);
 
     newSearcherMaxReachedCounter =
         new AttributedLongCounter(
             parentContext.longCounter(
-                "solr_core_searcher_warming_max",
+                "solr.core.searcher.warming_max",
                 "Total number of maximum concurrent warming searchers reached"),
             baseSearcherAttributes);
 
     newSearcherOtherErrorsCounter =
         new AttributedLongCounter(
             parentContext.longCounter(
-                "solr_core_searcher_errors", "Total number of searcher errors"),
+                "solr.core.searcher.errors", "Total number of searcher errors"),
             baseSearcherAttributes);
 
     newSearcherTimer =
         new AttributedLongTimer(
             parentContext.longHistogram(
-                "solr_core_indexsearcher_open_time",
+                "solr.core.indexsearcher.open.time",
                 "Time to open new searchers",
                 OtelUnit.MILLISECONDS),
             baseSearcherAttributes);
@@ -1350,20 +1348,20 @@ public class SolrCore implements SolrInfoBean, Closeable {
     newSearcherWarmupTimer =
         new AttributedLongTimer(
             parentContext.longHistogram(
-                "solr_core_indexsearcher_open_warmup_time",
+                "solr.core.indexsearcher.open.warmup.time",
                 "Time to warmup new searchers",
                 OtelUnit.MILLISECONDS),
             baseSearcherAttributes);
 
     parentContext.observableLongGauge(
-        "solr_core_ref_count",
+        "solr.core.ref_count",
         "The current number of active references to a Solr core",
         (observableLongMeasurement -> {
           observableLongMeasurement.record(getOpenCount(), baseGaugeCoreAttributes);
         }));
 
     parentContext.observableDoubleGauge(
-        "solr_core_disk_space",
+        "solr.core.disk_space",
         "Solr core disk space metrics",
         (observableDoubleMeasurement -> {
 
@@ -1397,7 +1395,7 @@ public class SolrCore implements SolrInfoBean, Closeable {
         OtelUnit.MEGABYTES);
 
     parentContext.observableDoubleGauge(
-        "solr_core_index_size",
+        "solr.core.index.size",
         "Index size for a Solr core",
         (observableDoubleMeasurement -> {
           if (!isClosed())
@@ -1407,7 +1405,7 @@ public class SolrCore implements SolrInfoBean, Closeable {
         OtelUnit.MEGABYTES);
 
     parentContext.observableLongGauge(
-        "solr_core_segments",
+        "solr.core.segments",
         "Number of segments in a Solr core",
         (observableLongMeasurement -> {
           if (isReady())
@@ -1416,7 +1414,7 @@ public class SolrCore implements SolrInfoBean, Closeable {
 
     if (coreContainer.isZooKeeperAware())
       parentContext.observableLongGauge(
-          "solr_core_is_leader",
+          "solr.core.is_leader",
           "Indicates whether this Solr core is currently the leader",
           (observableLongMeasurement -> {
             observableLongMeasurement.record(
@@ -1564,7 +1562,7 @@ public class SolrCore implements SolrInfoBean, Closeable {
       IndexOutput out = dir.createOutput(tmpFileName, DirectoryFactory.IOCONTEXT_NO_CACHE);
       os = new OutputStreamWriter(new IndexOutputOutputStream(out), StandardCharsets.UTF_8);
       p.store(os, IndexFetcher.INDEX_PROPERTIES);
-      dir.sync(Collections.singleton(tmpFileName));
+      dir.sync(Set.of(tmpFileName));
     } catch (Exception e) {
       throw new SolrException(
           ErrorCode.SERVER_ERROR, "Unable to write " + IndexFetcher.INDEX_PROPERTIES, e);
@@ -1688,9 +1686,7 @@ public class SolrCore implements SolrInfoBean, Closeable {
 
     map.computeIfAbsent(
         RunUpdateProcessorFactory.PRE_RUN_CHAIN_NAME,
-        k ->
-            new UpdateRequestProcessorChain(
-                Collections.singletonList(new NestedUpdateProcessorFactory()), this));
+        k -> new UpdateRequestProcessorChain(List.of(new NestedUpdateProcessorFactory()), this));
 
     return map;
   }
@@ -2138,11 +2134,7 @@ public class SolrCore implements SolrInfoBean, Closeable {
    * @see #withSearcher(IOFunction)
    */
   public RefCounted<SolrIndexSearcher> getSearcher() {
-    if (searchEnabled) {
-      return getSearcher(false, true, null);
-    }
-    throw new SolrException(
-        SolrException.ErrorCode.SERVICE_UNAVAILABLE, "Search is temporarily disabled");
+    return getSearcher(false, true, null);
   }
 
   /**
